// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with given expense 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={200}
      createAt={0}
      desc="Gum"
      id="1"
      key="1"
      note="note1"
    />
    <Connect(ExpenseListItem)
      amount={2002}
      createAt={-345600000}
      desc="Gum2"
      id="2"
      key="2"
      note="note2"
    />
    <Connect(ExpenseListItem)
      amount={2003}
      createAt={345600000}
      desc="Gum3"
      id="3"
      key="3"
      note="note3"
    />
  </div>
</div>
`;

exports[`should render expense list with zero expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
         No Expenses
      </span>
    </div>
  </div>
</div>
`;
